--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "6",
-    "@react-navigation/native": "6",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "6",
+    "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
@@ -21,9 +22,9 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-autocomplete-input": "^5.4.0",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.2",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.0.2",
     "redux-persist": "^6.0.0"
