--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
