--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
+    "expo-image": "~1.3.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
