--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
